@@ -1,8 +1,11 @@
+.travis.yml
 bin/pod-example
 Changes
 Example.pm
 examples/ex1.pl
 inc/Module/Install.pm
+inc/Module/Install/AuthorRequires.pm
+inc/Module/Install/AuthorTests.pm
 inc/Module/Install/Base.pm
 inc/Module/Install/Can.pm
 inc/Module/Install/Fetch.pm
@@ -18,15 +21,15 @@ MANIFEST			This list of files
 META.yml
 README
 SIGNATURE
-t/App-Pod-Example/00-use.t
-t/App-Pod-Example/01-version.t
-t/App-Pod-Example/02-pod_coverage.t
-t/App-Pod-Example/03-pod.t
-t/App-Pod-Example/04-new.t
-t/App-Pod-Example/05-run.t
+t/App-Pod-Example/01-use.t
+t/App-Pod-Example/02-version.t
+t/App-Pod-Example/03-new.t
+t/App-Pod-Example/04-run.t
 t/modules/Ex1.pm
 t/modules/Ex2.pm
 t/modules/Ex3.pm
 t/modules/Ex4.pm
 t/modules/Ex5.pm
 t/modules/Ex6.pm
+xt/App-Pod-Example/01-pod_coverage.t
+xt/App-Pod-Example/02-pod.t
