@@ -10,8 +10,6 @@ build_requires:
   Test::More: 0
   Test::NoWarnings: 0
   Test::Output: 1.02
-  Test::Pod: 0
-  Test::Pod::Coverage: 0
   Test::Warn: 0
 configure_requires:
   ExtUtils::MakeMaker: 6.36
@@ -28,6 +26,7 @@ no_index:
     - examples
     - inc
     - t
+    - xt
 requires:
   Class::Utils: 0.03
   English: 0
