@@ -8,10 +8,17 @@ use inc::Module::Install;
 # Definition.
 abstract 'Base class for pod_example script.';
 author 'Michal Spacek <skim@cpan.org>';
+author_requires 'English' => 0;
+author_requires 'File::Object' => 0.05;
+author_requires 'Test::More' => 0;
+author_requires 'Test::NoWarnings' => 0;
+author_requires 'Test::Pod' => 0;
+author_requires 'Test::Pod::Coverage' => 0;
 install_script 'bin/pod-example';
 license 'bsd';
 name 'App-Pod-Example';
 readme_from 'bin/pod-example';
+recursive_author_tests('xt');
 requires 'Class::Utils' => 0.03;
 requires 'English' => 0;
 requires 'Error::Pure' => 0.15;
@@ -30,8 +37,6 @@ test_requires 'IO::CaptureOutput' => 0;
 test_requires 'Test::More' => 0;
 test_requires 'Test::NoWarnings' => 0;
 test_requires 'Test::Output' => 1.02;
-test_requires 'Test::Pod' => 0;
-test_requires 'Test::Pod::Coverage' => 0;
 test_requires 'Test::Warn' => 0;
 tests_recursive;
 version '0.15';
